--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   graphql_flutter: ^5.2.1
   hive: ^2.2.3
   http: ^1.5.0
-  image_cropper: 9.1.0
+  image_cropper: ^11.0.0
   image_picker: ^1.2.0
   intl: ^0.20.0
   json_annotation: ^4.7.0
