--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ homepage: https://github.com/PalisadoesFoundation/talawa
 
 repository: https://github.com/PalisadoesFoundation/talawa
 environment:
-  sdk: ">=2.17.0 <=3.7.2"
+  sdk: ">=2.17.0 <=3.8.1"
 
 dependencies:
   ############# Remove ###########
@@ -55,7 +55,7 @@ dependencies:
   http: ^1.5.0
   image_cropper: 9.1.0
   image_picker: ^1.2.0
-  intl: ^0.19.0
+  intl: ^0.20.0
   json_annotation: ^4.7.0
   mockito: ^5.4.4
   network_image_mock: ^2.1.1
@@ -73,6 +73,7 @@ dependencies:
   syncfusion_flutter_calendar: ^28.2.12
   syncfusion_flutter_datepicker: ^28.2.3
   timelines_plus: ^1.0.7
+  timezone: ^0.10.0
   tutorial_coach_mark: ^1.3.1
   url_launcher: ^6.3.1
   vibration: ^3.1.3
