--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   timelines_plus: ^1.0.7
   tutorial_coach_mark: ^1.3.1
   url_launcher: ^6.3.1
+  uuid: ^4.5.1
   vibration: ^3.1.3
   video_player: ^2.10.0
   visibility_detector: ^0.4.0+2
