--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -261,6 +261,8 @@ jobs:
   Integration-Testing:
     name: Running Integration Tests
     runs-on: ubuntu-latest
+    env:
+      API_URL: http://127.0.0.1:4000/graphql
     steps:
       - name: Checkout Flutter App Repository
         uses: actions/checkout@v4
