--- a/.github/workflows/auto-label.json5
+++ b/.github/workflows/auto-label.json5
@@ -1,5 +1,6 @@
 {
   labelsSynonyms: {
+    'ci/cd': ['GitHub', 'Workflow', 'ci/cd'],
     dependencies: [
       'dependabot',
       'dependency',
