--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,7 @@ node_modules/
 package-lock.json
 npm-debug.log
 yarn-error.log
+
+# Plugin related
+/lib/plugin/available/*
+!/lib/plugin/available/index.dart
