--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,6 +74,7 @@ flutter {
 }
 
 dependencies {
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.10"
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
