--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -165,7 +165,58 @@ jobs:
           BASE_SHA=$(git merge-base "${{ github.event.pull_request.base.sha }}" "$HEAD_SHA")
 
           # Define sensitive files pattern
-          SENSITIVE_FILES=(".flake8$" ".pydocstyle$" "pyproject.toml$" ".env..*$" "vitest.config.js$" "src/App.tsx$" "^.github/.*" "^env.example$" ".node-version$" ".husky/.*" "scripts/.*" "src/style/.*" "schema.graphql$" "package.json$" "package-lock.json$" "tsconfig.json$" "^.gitignore$" ".eslintrc.json$" ".eslintignore$" ".prettierrc$" ".prettierignore$" "vite.config.ts$" "^docker/docker-compose.prod.yaml$" "^docker/docker-compose.dev.yaml$" "^docker/Dockerfile.dev$" "^docker/Dockerfile.prod$" "^config/docker/setup/nginx.conf$" "^config/docker/setup/nginx.prod.conf$" "CODEOWNERS$" "LICENSE$" "setup.ts$" ".coderabbit.yaml$" "CODE_OF_CONDUCT.md$" "CODE_STYLE.md$" "CONTRIBUTING.md$" "DOCUMENTATION.md$" "INSTALLATION.md$" "ISSUE_GUIDELINES.md$" "PR_GUIDELINES.md$" "README.md$" ".*.pem$" ".*.key$" ".*.cert$" ".*.password$" ".*.secret$" ".*.credentials$" ".nojekyll$" "yarn.lock$" "^docs/docusaurus.config.ts$" "^docs/sidebar..*" "CNAME$")
+          SENSITIVE_FILES=(
+            '.flake8$'
+            '.pydocstyle$'
+            'pyproject.toml$'
+            '.env..*$'
+            'vitest.config.js$'
+            'src/App.tsx$'
+            '^.github/.*'
+            '^env.example$'
+            '.node-version$'
+            '.husky/.*' 'scripts/.*'
+            'src/style/.*'
+            'schema.graphql$'
+            'package.json$'
+            'package-lock.json$'
+            'tsconfig.json$'
+            '^.gitignore$'
+            '.eslintrc.json$'
+            '.eslintignore$'
+            '.prettierrc$'
+            '.prettierignore$'
+            'vite.config.ts$'
+            '^docker/docker-compose.prod.yaml$'
+            '^docker/docker-compose.dev.yaml$'
+            '^docker/Dockerfile.dev$'
+            '^docker/Dockerfile.prod$'
+            '^config/docker/setup/nginx.conf$'
+            '^config/docker/setup/nginx.prod.conf$'
+            'CODEOWNERS$'
+            'LICENSE$'
+            'setup.ts$'
+            '.coderabbit.yaml$'
+            'CODE_OF_CONDUCT.md$'
+            'CODE_STYLE.md$'
+            'CONTRIBUTING.md$'
+            'DOCUMENTATION.md$'
+            'INSTALLATION.md$'
+            'ISSUE_GUIDELINES.md$'
+            'PR_GUIDELINES.md$'
+            'README.md$'
+            '.*.pem$'
+            '.*.key$'
+            '.*.cert$'
+            '.*.password$'
+            '.*.secret$'
+            '.*.credentials$'
+            '.nojekyll$'
+            'yarn.lock$'
+            '^docs/docusaurus.config.ts$'
+            '^docs/sidebar..*'
+            'CNAME$'
+          )
 
           # Check for changes in sensitive files
           CHANGED_UNAUTH_FILES=""
