--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -124,7 +124,7 @@ jobs:
           exit 1
 
   Check-Sensitive-Files:
-    if: ${{ github.actor != 'dependabot[bot]' && !contains(github.event.pull_request.labels.*.name, 'ignore-sensitive-files-pr') }}
+    if: ${{ github.actor != 'dependabot[bot]' }}
     name: Checks if sensitive files have been changed without authorization
     runs-on: ubuntu-latest
     steps:
@@ -132,19 +132,96 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Fetch all history for all branches and tags
+      - name: Get PR labels
+        id: check-labels
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          if [ -z "${{ github.event.pull_request.number }}" ]; then
+            echo "skip=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          LABELS="$(gh api repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/labels --jq '.[].name' | tr '\n' ' ')"
+
+          if echo "$LABELS" | grep -qw "ignore-sensitive-files-pr"; then
+            echo "::notice::Skipping sensitive files check due to 'ignore-sensitive-files-pr' label."
+            echo "skip=true" >> $GITHUB_OUTPUT
+          else
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
       - name: Get Changed Unauthorized files
+        if: steps.check-labels.outputs.skip != 'true'
         id: changed-unauth-files
         run: |
-          # Get the base branch ref
-          BASE_SHA=$(git merge-base ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }})
+          # Skip if not in PR context
+          if [ -z "${{ github.event.pull_request.base.sha }}" ]; then
+            echo "any_changed=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          # Determine base and head commits for comparison
+          HEAD_SHA="${{ github.event.pull_request.head.sha || github.sha }}"
+          BASE_SHA=$(git merge-base "${{ github.event.pull_request.base.sha }}" "$HEAD_SHA")
 
           # Define sensitive files pattern
-          SENSITIVE_FILES=".flake8 .pydocstyle pyproject.toml .env* vitest.config.js src/App.tsx .github/** env.example .node-version .husky/** scripts/** src/style/** schema.graphql package.json package-lock.json tsconfig.json .gitignore .eslintrc.json .eslintignore .prettierrc .prettierignore vite.config.ts docker/docker-compose.prod.yaml docker/docker-compose.dev.yaml docker/Dockerfile.dev docker/Dockerfile.prod config/docker/setup/nginx.conf config/docker/setup/nginx.prod.conf CODEOWNERS LICENSE setup.ts .coderabbit.yaml CODE_OF_CONDUCT.md CODE_STYLE.md CONTRIBUTING.md DOCUMENTATION.md INSTALLATION.md ISSUE_GUIDELINES.md PR_GUIDELINES.md README.md *.pem *.key *.cert *.password *.secret *.credentials .nojekyll yarn.lock docs/docusaurus.config.ts docs/sidebar* CNAME"
+          SENSITIVE_FILES=(
+            '.flake8$'
+            '.pydocstyle$'
+            'pyproject.toml$'
+            '.env..*$'
+            'vitest.config.js$'
+            'src/App.tsx$'
+            '^.github/.*'
+            '^env.example$'
+            '.node-version$'
+            '.husky/.*' 'scripts/.*'
+            'src/style/.*'
+            'schema.graphql$'
+            'package.json$'
+            'package-lock.json$'
+            'tsconfig.json$'
+            '^.gitignore$'
+            '.eslintrc.json$'
+            '.eslintignore$'
+            '.prettierrc$'
+            '.prettierignore$'
+            'vite.config.ts$'
+            '^docker/docker-compose.prod.yaml$'
+            '^docker/docker-compose.dev.yaml$'
+            '^docker/Dockerfile.dev$'
+            '^docker/Dockerfile.prod$'
+            '^config/docker/setup/nginx.conf$'
+            '^config/docker/setup/nginx.prod.conf$'
+            'CODEOWNERS$'
+            'LICENSE$'
+            'setup.ts$'
+            '.coderabbit.yaml$'
+            'CODE_OF_CONDUCT.md$'
+            'CODE_STYLE.md$'
+            'CONTRIBUTING.md$'
+            'DOCUMENTATION.md$'
+            'INSTALLATION.md$'
+            'ISSUE_GUIDELINES.md$'
+            'PR_GUIDELINES.md$'
+            'README.md$'
+            '.*.pem$'
+            '.*.key$'
+            '.*.cert$'
+            '.*.password$'
+            '.*.secret$'
+            '.*.credentials$'
+            '.nojekyll$'
+            'yarn.lock$'
+            '^docs/docusaurus.config.ts$'
+            '^docs/sidebar..*'
+            'CNAME$'
+          )
 
           # Check for changes in sensitive files
           CHANGED_UNAUTH_FILES=""
-          for pattern in $SENSITIVE_FILES; do
-            FILES=$(git diff --name-only --diff-filter=ACMRD $BASE_SHA ${{ github.event.pull_request.head.sha }} | grep -E "$pattern" || true)
+          for pattern in "${SENSITIVE_FILES[@]}"; do
+            FILES=$(git diff --name-only --diff-filter=ACMRD "$BASE_SHA" "$HEAD_SHA" | grep -E "$pattern" || true)
 
             if [ ! -z "$FILES" ]; then
               CHANGED_UNAUTH_FILES="$CHANGED_UNAUTH_FILES $FILES"
@@ -158,20 +235,21 @@ jobs:
           # Check if any unauthorized files changed
           if [ ! -z "$CHANGED_UNAUTH_FILES" ]; then
             echo "any_changed=true" >> $GITHUB_OUTPUT
-            echo "any_deleted=true" >> $GITHUB_OUTPUT
           else
             echo "any_changed=false" >> $GITHUB_OUTPUT
-            echo "any_deleted=false" >> $GITHUB_OUTPUT
           fi
 
       - name: List all changed unauthorized files
-        if: steps.changed-unauth-files.outputs.any_changed == 'true' || steps.changed-unauth-files.outputs.any_deleted == 'true'
+        if: steps.changed-unauth-files.outputs.any_changed == 'true'
         env:
           CHANGED_UNAUTH_FILES: ${{ steps.changed-unauth-files.outputs.all_changed_files }}
         run: |
-          for file in ${CHANGED_UNAUTH_FILES}; do
-            echo "$file is unauthorized to change/delete"
+          echo "::error::Unauthorized changes detected in sensitive files"
+          echo ""
+          for file in $CHANGED_UNAUTH_FILES; do
+            echo "- $file"
           done
+          echo ""
           echo "To override this, apply the 'ignore-sensitive-files-pr' label"
           exit 1
 
@@ -257,7 +335,7 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: false
           verbose: true
-          exclude: 'docs/'
+          exclude: "docs/"
 
       - name: Test acceptable level of code coverage
         uses: VeryGoodOpenSource/very_good_coverage@v3
@@ -308,7 +386,7 @@ jobs:
         run: cp .env.example .env
       - name: Building for ios
         run: flutter build ios --release --no-codesign
-        
+
   Test-Docusaurus-Deployment:
     name: Test Deployment to https://docs-mobile.talawa.io
     runs-on: ubuntu-latest
