chore: remove duplicate 'develop' entry from .coderabbit.yaml

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -16,8 +16,7 @@ reviews:
     enabled: true
     drafts: false
     base_branches:
-      - develop
-      - develop
+      - developo
       - main
   path_filters: 
     - '!**/docs/docs/**'
