fix(ci): restore Dart documentation auto-generation workflow

--- a/.github/workflows/dartdoc.yml
+++ b/.github/workflows/dartdoc.yml
@@ -8,6 +8,7 @@
 #
 ##############################################################################
 ##############################################################################
+# yamllint disable rule:truthy
 
 ---
 name: Generate Dart Documentation (Markdown)
