--- a/.github/workflows/dartdoc.yml
+++ b/.github/workflows/dartdoc.yml
@@ -10,7 +10,7 @@
 ##############################################################################
 
 ---
-name: Generate Dart Documentation (Markdown)
+name: Generate Dart Documentation (HTML)
 
 on:
   push:
@@ -37,9 +37,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Setup Python (for consistency with repo)
-        uses: actions/setup-python@v5
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
