--- a/.github/workflows/dartdoc.yml
+++ b/.github/workflows/dartdoc.yml
@@ -68,7 +68,7 @@ jobs:
           git config user.name "talawa-docs-bot"
           git config user.email "talawa-docs-bot@users.noreply.github.com"
           git add docs/auto-docs
-          if ! git diff-index --quiet HEAD; then
+          if ! git diff-index --cached --quiet HEAD; then
             git commit -m "chore(ci): update auto-generated Dart HTML docs"
             git push
           else
