--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -394,18 +394,20 @@ jobs:
     # Run only if the develop branch and not dependabot
     if: ${{ github.actor != 'dependabot[bot]' && github.event.pull_request.base.ref == 'develop' }}
     steps:
-      - name: Checkout the Repository
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
         with:
-          node-version: "22.x"
+          cache: pnpm
+          cache-dependency-path: |
+            docs/pnpm-lock.yaml
+            docs/package.json
+      # Run Docusaurus in the ./docs directory
       - name: Install dependencies
         working-directory: ./docs
-        run: npm install
+        run: pnpm install --frozen-lockfile
       - name: Test building the website
         working-directory: ./docs
-        run: npm run build
+        run: pnpm build
 
   Python-Compliance:
     name: Check Python Code Style
