--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -376,7 +376,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: l"16.1"
+          xcode-version: "16.1"
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{ env.FLUTTER_VERSION }}
