--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -41,7 +41,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y pandoc
-
+      - name: Install dartdoc globally
+        run: |
+          flutter pub global activate dartdoc
+          echo "$HOME/.pub-cache/bin" >> $GITHUB_PATH
       - name: Copy existing docs
         run: cp -r docs/docs/auto-docs docs-before
 
