--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -43,7 +43,7 @@ jobs:
           sudo apt-get install -y pandoc
       - name: Install dartdoc globally
         run: |
-          flutter pub global activate dartdoc
+          flutter pub global activate dartdoc 8.3.4
           echo "$HOME/.pub-cache/bin" >> $GITHUB_PATH
       - name: Copy existing docs
         run: cp -r docs/docs/auto-docs docs-before
