--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,9 +20,85 @@ env:
   FLUTTER_VERSION: 3.32.8
 
 jobs:
+  Docs-Check:
+    name: Verify Documentation
+    runs-on: ubuntu-latest
+    outputs:
+      docs-valid: ${{ steps.compare.outputs.docs-valid }}
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: stable
+
+      - name: Install Pandoc
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pandoc
+
+      - name: Ensure dartdoc available
+        run: |
+          dart pub global deactivate dartdoc || true
+          dart pub global activate dartdoc 
+          echo "$HOME/.pub-cache/bin" >> $GITHUB_PATH
+
+      - name: Copy existing docs
+        run: |
+          if [ -d "docs/docs/auto-docs" ]; then
+            cp -r docs/docs/auto-docs docs-before
+          else
+            mkdir -p docs-before
+          fi
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Regenerate docs (HTML -> MD -> cleanup)
+        run: |
+          chmod +x scripts/docusaurus/generate_docs.sh
+          bash scripts/docusaurus/generate_docs.sh
+
+      - name: Compare docs
+        id: compare
+        run: |
+          set -e
+          MISSING=false
+
+          if [ ! -d "docs-before" ]; then
+            echo "::error::Missing folder: docs-before"
+            MISSING=true
+          fi
+
+          if [ ! -d "docs/docs/auto-docs" ]; then
+            echo "::error::Missing folder: docs/docs/auto-docs"
+            MISSING=true
+          fi
+
+          if [ "$MISSING" = true ]; then
+            echo "docs-valid=false" >> $GITHUB_OUTPUT
+            exit 1
+          fi
+
+          if ! diff -qr docs-before docs/docs/auto-docs; then
+            echo "::error::Documentation mismatch — please run locally: bash scripts/docusaurus/generate_docs.sh and commit updated docs/docs/auto-docs"
+            echo "docs-valid=false" >> $GITHUB_OUTPUT
+            exit 1
+          else
+            echo "docs-valid=true" >> $GITHUB_OUTPUT
+            echo "Documentation OK"
+          fi
+
   Flutter-Codebase-Check:
     name: Checking codebase
     runs-on: ubuntu-latest
+    needs: [Docs-Check]
+    if: needs.Docs-Check.outputs.docs-valid == 'true'
     permissions:
       contents: write
     #needs: PR-Greeting
@@ -112,9 +188,10 @@ jobs:
           exit 1
 
   Check-Target-Branch:
-    if: ${{ github.actor != 'dependabot[bot]' }}
+    if: needs.Docs-Check.outputs.docs-valid == 'true' && github.actor != 'dependabot[bot]'
     name: Check Target Branch
     runs-on: ubuntu-latest
+    needs: [Docs-Check]
     steps:
       - name: Check if the target branch is develop
         if: github.event.pull_request.base.ref != 'develop'
@@ -124,9 +201,10 @@ jobs:
           exit 1
 
   Check-Sensitive-Files:
-    if: ${{ github.actor != 'dependabot[bot]' }}
+    if: needs.Docs-Check.outputs.docs-valid == 'true' && github.actor != 'dependabot[bot]'
     name: Checks if sensitive files have been changed without authorization
     runs-on: ubuntu-latest
+    needs: [Docs-Check]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -254,9 +332,10 @@ jobs:
           exit 1
 
   Count-Changed-Files:
-    if: ${{ github.actor != 'dependabot[bot]' }}
     name: Checks if number of files changed is acceptable
+    if: needs.Docs-Check.outputs.docs-valid == 'true' && github.actor != 'dependabot[bot]'
     runs-on: ubuntu-latest
+    needs: [Docs-Check]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -303,7 +382,8 @@ jobs:
   Flutter-Testing:
     name: Testing codebase
     runs-on: ubuntu-latest
-    needs: [Flutter-Codebase-Check, Python-Compliance]
+    if: needs.Docs-Check.outputs.docs-valid == 'true'
+    needs: [Docs-Check, Flutter-Codebase-Check, Python-Compliance]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -346,7 +426,8 @@ jobs:
   Android-Build:
     name: Testing build for android
     runs-on: ubuntu-latest
-    needs: [Flutter-Testing]
+    if: needs.Docs-Check.outputs.docs-valid == 'true'
+    needs: [Docs-Check, Flutter-Testing]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -371,7 +452,8 @@ jobs:
     permissions:
       contents: write
     runs-on: macos-14
-    needs: Flutter-Testing
+    if: needs.Docs-Check.outputs.docs-valid == 'true'
+    needs: [Docs-Check, Flutter-Testing]
     steps:
       - uses: actions/checkout@v4
       - uses: maxim-lobanov/setup-xcode@v1
@@ -390,28 +472,40 @@ jobs:
   Test-Docusaurus-Deployment:
     name: Test Deployment to https://docs-mobile.talawa.io
     runs-on: ubuntu-latest
-    needs: [iOS-Build, Android-Build]
-    # Run only if the develop branch and not dependabot
-    if: ${{ github.actor != 'dependabot[bot]' && github.event.pull_request.base.ref == 'develop' }}
+    needs: [iOS-Build, Android-Build, Docs-Check]
+    if: ${{ github.actor != 'dependabot[bot]' && github.event.pull_request.base.ref == 'develop' && needs.Docs-Check.outputs.docs-valid == 'true'}}
     steps:
       - uses: actions/checkout@v4
+      # Install pnpm (NO caching here)
       - uses: pnpm/action-setup@v4
         with:
-          cache: pnpm
-          cache-dependency-path: |
-            docs/pnpm-lock.yaml
-            docs/package.json
-      # Run Docusaurus in the ./docs directory
+          version: 9
+          run_install: false
+      # Proper PNPM cache (OFFICIAL recommended method)
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('docs/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
+
+      # Install dependencies inside docs folder
       - name: Install dependencies
         working-directory: ./docs
         run: pnpm install --frozen-lockfile
+
+      # Build Docusaurus
       - name: Test building the website
         working-directory: ./docs
         run: pnpm build
 
+
   Python-Compliance:
     name: Check Python Code Style
     runs-on: ubuntu-latest
+    if: needs.Docs-Check.outputs.docs-valid == 'true'
+    needs: [Docs-Check]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
