--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
     sdk: flutter
   flutter_cache_manager: ^3.4.1
   flutter_dotenv: ^6.0.0
+  flutter_image_compress: ^2.4.0
   flutter_local_notifications: ^18.0.1
   flutter_localizations:
     sdk: flutter
@@ -75,6 +76,7 @@ dependencies:
   timelines_plus: ^1.0.8
   tutorial_coach_mark: ^1.3.3
   url_launcher: ^6.3.2
+  uuid: ^4.5.1
   vibration: ^3.1.4
   video_player: ^2.10.0
   visibility_detector: ^0.4.0+2
