--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,7 +81,10 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.13
-  # custom_lint: ^0.7.0  # Temporarily disabled for Dart 3.10 compatibility
+  # TODO: Re-enable once custom_lint supports Dart 3.10.0
+  # custom_lint 0.7.0 requires _macros package from SDK which doesn't exist in Dart 3.10.0
+  # This is a known incompatibility issue. See: https://github.com/invertase/dart_custom_lint/issues
+  # custom_lint: 0.7.0
   fake_async: ^1.3.1
   flutter_test:
     sdk: flutter
@@ -91,7 +94,9 @@ dev_dependencies:
   lint: ^2.7.0
 
   mocktail_image_network: ^1.2.0
-  # talawa_lint:  # Temporarily disabled for Dart 3.10 compatibility
+  # TODO: Re-enable once custom_lint supports Dart 3.10.0
+  # talawa_lint depends on custom_lint which has incompatibility with Dart 3.10.0
+  # talawa_lint:
   #   path: talawa_lint/
 
   url_launcher_platform_interface: 2.3.2
