--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,15 +1,18 @@
+# Configuration for automated dependency updates using Dependabot
 version: 2
 updates:
-  # Enable version updates for flutter's pub package manager
-  - package-ecosystem: "pub"
-    # Look for `pubspec.yaml` and `pubspec.lock` files in the `root` directory
+  # Define the target package ecosystem
+  - package-ecosystem: "npm"
+    # Specify the root directory
     directory: "/"
-    # Check the pub.dev registry for updates every day (weekdays)
+    # Schedule automated updates to run weekly
     schedule:
       interval: "monthly"
+    # Labels to apply to Dependabot PRs
+    labels:
+      - "dependencies"
+    # Specify the target branch for PRs
     target-branch: "develop"
-    # # Add default reviewers
-    # reviewers:
-    #   - "palisadoes"
-    #   - "randomUserName"
-    
+    # Customize commit message prefix
+    commit-message:
+      prefix: "chore(deps):"
